--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 # User config
-author: "Elies Delgado Tamarit."
+author: "Elies Delgado Tamarit"
 
-tagline: "This is me."
+tagline: "This is me"
 
 description: "My name is Elies and I'm an enthusiastic and hard-working youngster from Barcelona who is always ready to embrace new challenges, adventures and opportunities."
 
