changed github for fiverr

--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@ keywords: "Elies Delgado Tamarit, Music, Festivals, Technology, Innovation, Mark
 email: "elies.delgado@example.com"
 linkedin: "https://www.linkedin.com/in/eliesdt/"
 twitter: "https://twitter.com/thisiselies"
-github: "https://github.com/"
+fiverr: "https://www.fiverr.com/eliesing"
 
 baseurl: ""
 highlighter: rouge
